Reject and Confirm transaction
