# src/transactions/models/transactionParty/ITransactionParty.ts
@@ -1,0 +1,10 @@
+interface ITransactionParty {
+    ratingText?: string;
+    ratingValue?: number;
+    role: string;
+    transactionId: number;
+    transactionPartyId: number;
+    userId: number;
+}
+
+export default ITransactionParty;
